# matrixlib

./: .buildinfo  .gitignore  CHANGELOG.md  LICENSE  README.md  api-builtins.html  api-rules.html  best-practices.html  changelog.html  faq.html  genindex.html  guide-access.html  guide-construction.html  guide-material-state.html  guide-pattern-matching.html  guide-prelude.html  guide-rules.html  guide-typing.html  idk.py  index.html  main.py  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  run_tests.py  search.html  searchindex.js
.github/workflows/: sphinx.yml
_sources/: changelog.rst.txt  faq.rst.txt  guide-access.rst.txt  guide-construction.rst.txt  guide-pattern-matching.rst.txt  guide-prelude.rst.txt  guide-rules.rst.txt  guide-typing.rst.txt  index.rst.txt
docs/: requirements.txt
docs/source/: abc.rst  api-builtins.rst  api-rules.rst  api_builtins.rst  api_rule.rst  best-practices.rst  builtins.rst  changelog.rst  conf.py  faq.rst  guide-access.rst  guide-basics.rst  guide-construction.rst  guide-material-state.rst  guide-pattern-matching.rst  guide-prelude.rst  guide-rules.rst  guide-typing.rst  guide_basics.rst  guide_construction.rst  guide_rules.rst  index.rst  matrices.rst  shapes.rst  utilities.rst
matrices/: __init__.py  __init__.pyi  abc.py  abc.pyi  abstract.py  abstract.pyi  base.py  base.pyi  builtins.py  builtins.pyi  callable.py  callable.pyi  exceptions.py  frozen.py  frozen.pyi  generic.py  generic.pyi  grid.py  key.py  matrices.py  matrices.pyi  matrices_old.pyi.txt  meshes.py  numeric.py  numeric.pyi  ordering.py  ordering.pyi  protocols.py  protocols.py.txt  protocols.pyi  protocols.pyi.txt  rule.py  rule.pyi  shape.py  shape.pyi  shapes.py  shapes.pyi  tests.py  transpose.py  transpose.pyi  (+10 more)
matrices/builtins/: common.py
matrices/core/: __init__.py  matrices.py  matrices.pyi  shapes.py  shapes.pyi  typeshed.pyi  utilities.py  utilities.pyi
matrices/shapes/: __init__.py  __init__.pyi  abc.py  abc.pyi  abstract.py  abstract.pyi  builtins.py  builtins.pyi  common.py  common.pyi  shape.py  shape.pyi  view.py  view.pyi  views.py  views.pyi
matrices/utilities/: __init__.py  __init__.pyi  checked_map.py  checked_map.pyi  common.py  common.pyi  logical_operator.py  logical_operator.pyi  matrix_map.py  matrix_map.pyi  matrix_operator.py  matrix_operator.pyi  matrix_product.py  matrix_product.pyi  operator.py  rule.py  rule.pyi  vectorize.py  vectorize.pyi
matrices/views/: __init__.py  abc.py  abc.pyi  builtins.py  builtins.pyi
matrixlib/: __init__.py  _meshes.py  _rule.py  builtins.py  builtins_old  meshes.py  tests.py  typing.py
matrixlib/accessors/: __init__.py  abstracts.py  arrayed.py  bases.py  permutations.py  rule.py  sheers.py  slices.py  stacks.py
matrixlib/meshes/: __init__.py  abc.py  arrayed.py  permutations.py  sheers.py  slices.py
matrixlib/sieves/: __init__.py  abc.py  arrayed.py  permutations.py  sheers.py  slices.py  stacks.py
matrixlib/tests/: test_rule.py
tests/: __init__.py  test_matrices.py  test_protocols.py
