[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "matrices-py"
version = "0.2.3"
authors = [
  { name="Braedyn L" },
]
description = "Dynamic, vectorized sequence types in ≤ 2 dimensions."
readme = "README.md"
license = { text="MIT License" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["matrices", "matrix", "vectors", "vector", "vectorization"]

[project.urls]
"Homepage" = "https://github.com/braedynl/matrices-py"
"Source" = "https://github.com/braedynl/matrices-py"
"Documentation" = "https://github.com/braedynl/matrices-py/wiki"
"Bug Tracker" = "https://github.com/braedynl/matrices-py/issues"

[tool.setuptools.package-data]
"*" = ["*.pyi", "py.typed"]

[tool.pyright]
reportShadowedImports = false
