[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "matrices-py"
version = "0.3.0"
authors = [
  { name="Braedyn L" },
]
description = "General-purpose matrices for the layman"
readme = "README.md"
license = { text="MIT License" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["matrices", "matrix", "vectors", "vector", "vectorization"]
dependencies = [
  "typing_extensions>=4.0.1",
]

[project.urls]
"Homepage" = "https://github.com/braedynl/matrices-py"
"Source" = "https://github.com/braedynl/matrices-py"
"Bug Tracker" = "https://github.com/braedynl/matrices-py/issues"

[tool.setuptools.package-data]
"*" = ["*.pyi", "py.typed"]

[tool.pyright]
reportShadowedImports = false
